-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.9.5
-
None
-
f02256cce12392a35d177511e39052985fc720ac
On model reset QHeaderView::reset() does not call d->invalidateCachedSizeHint();
So any data change that affects header height will not display correctly as the size of the header view is not updated.
calling headerDataChanged on any section is a workaround but should not be required after model reset.